src/objects/Optional_Professional_Service__c.object
<CustomObject>
    <fields>
        <fullName>List_Price__c</fullName>
        <label>List Price</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NokiaCPQ_Product_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Name</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Description</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Proposal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote/Proposal</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipLabel>Optional Professional Services</relationshipLabel>
        <relationshipName>Optional_Professional_Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Optional Professional Service</label>
    <nameField>
        <displayFormat>PS-{0000}</displayFormat>
        <label>Optional Professional Service Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Optional Professional Services</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>